# md2pdf

./: README.md  pyproject.toml
src/md2pdf/: github-markdown-dark.css  main.py  temp.html  template.html  test.md
src/md2pdf/lua/: callouts-filter.lua
