[project]
name = "md2pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "syhzrl",email = "syhzrl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer (>=0.21.1,<0.22.0)",
    "weasyprint (>=68.1,<69.0)"
]

[tool.poetry]
packages = [{include = "md2pdf", from = "src"}]

[tool.poetry.scripts]
md2pdf = "md2pdf.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
